# Makefile.am -- src level Makefile for libotf.
# Copyright (C) 2003, 2004
#   National Institute of Advanced Industrial Science and Technology (AIST)
#   Registration Number H15PRO167

# This file is part of libotf.

# Libotf is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation; either version 2.1 of the License, or
# (at your option) any later version.

# Libotf is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with this library, in a file named COPYING; if not,
# write to the Free Software Foundation, Inc., 59 Temple Place, Suite
# 330, Boston, MA 02111-1307, USA

## Process this file with Automake to create Makefile.in

lib_LTLIBRARIES = libotf.la

libotf_la_SOURCES = \
	otf.h \
	otferror.h otferror.c \
	otfopen.c \
	otfdrive.c

include_HEADERS = otf.h
